--- a/_posts/2018-01-09-CPU-칩셋-취약점-보안-업데이트-권고.md
+++ b/_posts/2018-01-09-CPU-칩셋-취약점-보안-업데이트-권고.md
@@ -1,17 +1,18 @@
 ## CPU 칩셋 취약점 보안 업데이트 권고
 
-안녕하세요. 
+보안 역사상 가장 강력한 녀석이 나타났네요.
 
-지난 1월 3일 구글의 프로젝트 제로(얀 호른)에서 발표한 CPU 보안 취약점(CVE-2017-5753, CVE-2017-5715, CVE-2017-5754)이 발표되었고, 다음날 이를 방어할 보안패치들이 발표되었습니다. 
+![meltdown](https://meltdownattack.com/images/meltdown.min.svg "meltdown")
 
-사용자의 프로그램이 다른 사용자 프로그램의 메모리를 읽을 수 있거나, 사용자의 프로그램이 운영체제의 메모리의 데이터를 읽을 수 있는 치명적인 취약점입니다. 
+바로 멜트다운(meltdown)과 스펙터(Spectre)로 불리는 CPU 취약점입니다.
 
-관련업체들은 작년 중순 이후 문제점을 공유하여, 취약점 제거를 준비해왔으며 1월 3일 현재 클라우드 벤더 들은 이에 대한 준비가 모두 끝난 상태입니다. 
+자세한 설명은 [나무위키](https://namu.wiki/w/CPU%EA%B2%8C%EC%9D%B4%ED%8A%B8) 참고 하기 바랍니다.
 
-하지만, VM의 GuestOS는 여전히 보안패치를 적용해야 하며 각 벤더들이 내 놓은 대책을 보면 다음과 같습니다. 
+해결을 위해 지난 1월 3일 구글의 프로젝트 제로(얀 호른)에서 발표한 CPU 보안 취약점(CVE-2017-5753, CVE-2017-5715, CVE-2017-5754)이 발표되었고, 다음날 이를 방어할 보안패치들이 발표되었습니다.
 
+관련업체들은 작년 중순 이후 문제점을 공유하여, 취약점 제거를 준비해왔으며 1월 3일 현재 클라우드 벤더 들은 이에 대한 준비가 모두 끝난 상태이지만, VM의 GuestOS는 여전히 보안패치를 적용해야 하며 각 벤더들이 내 놓은 대책을 보면 다음과 같습니다.
 
-
+-----------------------------------------------------------------------
 - [Security Advisory from AWS](https://aws.amazon.com/security/security-bulletins/AWS-2018-013/)
 
 - [Security Advisory from  Microsoft Azure](https://portal.msrc.microsoft.com/en-US/security-guidance/advisory/ADV180002)
@@ -20,17 +21,18 @@
 
 - [Security Advisory from Heroku](https://blog.heroku.com/meltdown-and-spectre-security-update)
 
-- [Security Advisory from Ubuntu: To be announced](https://wiki.ubuntu.com/SecurityTeam/KnowledgeBase/SpectreAndMeltdown) 
+- [Security Advisory from Ubuntu: To be announced](https://wiki.ubuntu.com/SecurityTeam/KnowledgeBase/SpectreAndMeltdown)
 
 - [Security Advisory from Redhat](https://access.redhat.com/security/vulnerabilities/speculativeexecution)
 
-   [출처 : https://www.botmetric.com/blog/meltdown-spectre-cpu-vulnerability/]
+-----------------------------------------------------------------------
+(https://www.botmetric.com/blog/meltdown-spectre-cpu-vulnerability/)
 
 
-참고 : 
+
+참고 :
 
 1. https://www.krcert.or.kr/data/secNoticeView.do?bulletin_writing_sequence=26929
 2. https://www.botmetric.com/blog/meltdown-spectre-cpu-vulnerability/
 3. http://googleprojectzero.blogspot.kr/
 4. https://spectreattack.com/, https://meltdownattack.com/
- 
