--- a/_posts/2018-01-09-CPU-칩셋-취약점-보안-업데이트-권고.md
+++ b/_posts/2018-01-09-CPU-칩셋-취약점-보안-업데이트-권고.md
@@ -6,11 +6,11 @@
 
 사용자의 프로그램이 다른 사용자 프로그램의 메모리를 읽을 수 있거나, 사용자의 프로그램이 운영체제의 메모리의 데이터를 읽을 수 있는 치명적인 취약점입니다. 
 
-관련업체들은 작년 중순 이후 문제점을 공유하여, 취약점 제거를 준비해왔으며 1월 3일 현재 클라우드 벤더 들은 이에 대한 준비가 모두 끝난 상태입니다. 
-
-하지만, VM의 GuestOS는 여전히 보안패치를 적용해야 하며 각 벤더들이 내 놓은 대책을 보면 다음과 같습니다. 
+관련업체들은 작년 중순 이후 문제점을 공유하여, 취약점 제거를 준비해왔으며 1월 3일 현재 클라우드 벤더 들은 이에 대한 준비가 모두 끝난 상태이지만, VM의 GuestOS는 여전히 보안패치를 적용해야 하며 각 벤더들이 내 놓은 대책을 보면 다음과 같습니다. 
 
 
+
+#### 클라우드 벤더들의 대책
 
 - [Security Advisory from AWS](https://aws.amazon.com/security/security-bulletins/AWS-2018-013/)
 
@@ -27,10 +27,14 @@
    [출처 : https://www.botmetric.com/blog/meltdown-spectre-cpu-vulnerability/]
 
 
+
+
+
+
 참고 : 
 
 1. https://www.krcert.or.kr/data/secNoticeView.do?bulletin_writing_sequence=26929
 2. https://www.botmetric.com/blog/meltdown-spectre-cpu-vulnerability/
 3. http://googleprojectzero.blogspot.kr/
 4. https://spectreattack.com/, https://meltdownattack.com/
- 
+
